artist name not showing bugfix

--- a/src/styles/_trackListStyles.scss
+++ b/src/styles/_trackListStyles.scss
@@ -72,8 +72,7 @@
     border-left: 0.1em hsl(0, 0%, 35%) solid;
     border-radius: 10px;
     box-shadow: 0 0 10px 10px hsla(210, 7%, 5%, 0.4),
-      0 0 20px 20px hsla(217, 14%, 18%, 0.5),
-      0 0 40px 40px hsla(218, 29%, 16%, 0.5);
+      0 0 20px 20px hsla(217, 14%, 18%, 0.5), 0 0 40px 40px hsla(218, 29%, 16%, 0.5);
     margin: auto 0;
     width: 350px;
     opacity: 1;
@@ -104,6 +103,7 @@
         width: 3.5em;
         object-fit: cover;
         margin: 0.2em 1em;
+        flex-shrink: 0;
       }
 
       .song-info {
@@ -117,12 +117,17 @@
 
         .song-name {
           font-size: 1.7em;
+          color: hsl(0, 0%, 77%);
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
 
         .artist-name {
           font-size: 1.4em;
           font-weight: lighter;
           color: hsl(0, 0%, 77%);
+          overflow: hidden;
+          text-overflow: ellipsis;
         }
       }
 
